# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  09 Dec 2006; Mike Auty <ikelos@gentoo.org> eclass/vmware.eclass:
  Added in code to remove the PAX MPROTECT restrciction on certain vmware
  binaries.  Should fix bug #157602.

  01 Dec 2006; Mike Auty <ikelos@gentoo.org> eclass/vmware.eclass:
  Fix regression where we slipped back to any-any104, from 105 (which fixes
  2.6.19 build issues).  Going to push this change to the main tree this
  weekend.

  29 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Fixed bug #156387 with a sync from the tree.

  22 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Make sure we only unpack the openssl stuff if it is listed in SRC_URI, not
  if it exists in DISTDIR. We also only remove the openssl stuff if we have
  newer versions in S.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-4.5.3-r1.e
  build,
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.1-r2.e
  build,
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.2.ebui
  ld,
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.3.ebui
  ld:
  Added ANY_ANY to all of the vmware-workstation-tools ebuilds, so we don't
  unpack it, since they aren't listed in SRC_URI.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1-r1.ebuild:
  Added ANY_ANY so we don't pull down the files, and changed dir to
  /opt/vmware/esx/tools instead of /opt/vmware/tools.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Moved CD fetching to src_unpack, so binary packages don't need the CD.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  OK, unpack doesn't like absolute paths.
