@@ -7,10 +7,10 @@ MD5 4715fdd4d9d2a45f23a8995287b95ac5 files/patches/vmhgfs/000_all_driver-get_sb_
 RMD160 733002bae11bfced4a225c6340b94879172f03b9 files/patches/vmhgfs/000_all_driver-get_sb_nodev.patch 1709
 SHA256 a50058a2c045c3af03f26ef6cb82ea8454c2dc62ecf5113b8670ecd244781202 files/patches/vmhgfs/000_all_driver-get_sb_nodev.patch 1709
 DIST vmware-any-any-update105.tar.gz 296970 RMD160 5da1b91c81ff1023c8f4dbc3ae02f7f180785e67 SHA1 179812c0750f450754b82fbc0f57e44dd2b84945 SHA256 568939479294b4200e667ec0e3ad0d24f0e37356ccb3267b21de803530694426
-EBUILD vmware-server-tools-1.0.1.29996.ebuild 1365 RMD160 0f97577b96c181ca8b74dc02a7cf4fdff2958dac SHA1 b5aba4d2e9c61e3159d7ba089e66ddfc18cb6edb SHA256 34c157a62e0aa39ff6c7e97cc3ca70c5a8a31b854b170e663376b5e33149df95
-MD5 85adf640de58aee19e316f21567758d8 vmware-server-tools-1.0.1.29996.ebuild 1365
-RMD160 0f97577b96c181ca8b74dc02a7cf4fdff2958dac vmware-server-tools-1.0.1.29996.ebuild 1365
-SHA256 34c157a62e0aa39ff6c7e97cc3ca70c5a8a31b854b170e663376b5e33149df95 vmware-server-tools-1.0.1.29996.ebuild 1365
+EBUILD vmware-server-tools-1.0.1.29996.ebuild 1365 RMD160 de36233d8ddb0786ba69c9e66a375b595c35001b SHA1 7b0ce36e24f5eeadcab9ba201417b111a0902bbe SHA256 48dee1658930413cf5c9a0ac4e715162059497879e1337fadeb43cd91bbd26f9
+MD5 a9d6560329c73dcc600b7a5b790fb17d vmware-server-tools-1.0.1.29996.ebuild 1365
+RMD160 de36233d8ddb0786ba69c9e66a375b595c35001b vmware-server-tools-1.0.1.29996.ebuild 1365
+SHA256 48dee1658930413cf5c9a0ac4e715162059497879e1337fadeb43cd91bbd26f9 vmware-server-tools-1.0.1.29996.ebuild 1365
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
