@@ -15,9 +15,9 @@ DESCRIPTION="VMware Server for Linux"
 HOMEPAGE="http://www.vmware.com/"
 SRC_URI="http://download3.vmware.com/software/vmserver/${MY_P}.tar.gz
 		http://ftp.cvut.cz/vmware/${ANY_ANY}.tar.gz
-		http://ftp.cvut.cz/vmware/obselete/${ANY_ANY}.tar.gz
+		http://ftp.cvut.cz/vmware/obsolete/${ANY_ANY}.tar.gz
 		http://knihovny.cvut.cz/ftp/pub/vmware/${ANY_ANY}.tar.gz
-		http://knihovny.cvut.cz/ftp/pub/vmware/obselete/${ANY_ANY}.tar.gz
+		http://knihovny.cvut.cz/ftp/pub/vmware/obsolete/${ANY_ANY}.tar.gz
 		http://dev.gentoo.org/~ikelos/devoverlay-distfiles/${PN}-perl-fixed-rpath-libs.tar.bz2
 		mirror://gentoo/${PN}-perl-fixed-rpath-libs.tar.bz2
 		http://dev.gentoo.org/~wolf31o2/sources/dump/vmware-libssl.so.0.9.7l.tar.bz2
