@@ -7,13 +7,13 @@ inherit eutils vmware
 DESCRIPTION="Guest-os tools for VMware Workstation"
 HOMEPAGE="http://www.vmware.com/"
 SRC_URI="http://ftp.cvut.cz/vmware/${ANY_ANY}.tar.gz
-	http://ftp.cvut.cz/vmware/obselete/${ANY_ANY}.tar.gz
+	http://ftp.cvut.cz/vmware/obsolete/${ANY_ANY}.tar.gz
 	http://knihovny.cvut.cz/ftp/pub/vmware/${ANY_ANY}.tar.gz
-	http://knihovny.cvut.cz/ftp/pub/vmware/obselete/${ANY_ANY}.tar.gz"
+	http://knihovny.cvut.cz/ftp/pub/vmware/obsolete/${ANY_ANY}.tar.gz"
 #	http://ftp.cvut.cz/vmware/${TOOLS_ANY}.tar.gz
-#	http://ftp.cvut.cz/vmware/obselete/${TOOLS_ANY}.tar.gz
+#	http://ftp.cvut.cz/vmware/obsolete/${TOOLS_ANY}.tar.gz
 #	http://knihovny.cvut.cz/ftp/pub/vmware/${TOOLS_ANY}.tar.gz
-#	http://knihovny.cvut.cz/ftp/pub/vmware/obselete/${TOOLS_ANY}.tar.gz"
+#	http://knihovny.cvut.cz/ftp/pub/vmware/obsolete/${TOOLS_ANY}.tar.gz"
 
 LICENSE="vmware"
 SLOT="0"
