@@ -2,6 +2,12 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  15 Dec 2006; Mike Auty <ikelos@gentoo.org> 
+  app-emulation/vmware-server/vmware-server-1.0.1.29996-r4.ebuild,
+  app-emulation/vmware-server-tools/vmware-server-tools-1.0.1.29996.ebuild, 
+  app-eumalation/vmware-workstation-tools/vmware-workstation-tools-4.5.3-r1.ebuild:
+  Fixed a typo from obselete to obsolete (fixes bug 158134).
+
   09 Dec 2006; Mike Auty <ikelos@gentoo.org> eclass/vmware.eclass:
   Added in code to remove the PAX MPROTECT restrciction on certain vmware
   binaries.  Should fix bug #157602.
